--- a/src/components/Popper/Menu/Menu.module.scss
+++ b/src/components/Popper/Menu/Menu.module.scss
@@ -10,6 +10,9 @@
     padding-bottom: 8px;
     padding-top: 8px;
 }
+.menu-body{
+    overflow-y: auto;
+}
 //Menu items
 .menu-item{
     width: 100%;
@@ -33,6 +36,8 @@
 .header{
     position: relative;
     height: 50px;
+    flex-shrink: 0;
+    // margin-top: -8px;
 }
 .back-btn{
     width: 50px;
