--- a/src/components/GlobalStyles/GlobalStyles.scss
+++ b/src/components/GlobalStyles/GlobalStyles.scss
@@ -8,6 +8,8 @@
     --white: #fff;
     --text-color: #161823;
 
+    --font-family: 'ProximaNova', sans-serif;
+
     //Default layout
     --default-layout-header-height: 60px;
     --default-layout-width: 1150px;
@@ -24,16 +26,35 @@ html{
     font-size: 62.5%;
 }
 body{
-    font-family: 'ProximaNova', sans-serif;
+    font-family: var(--font-family);
     font-size: 1.6rem;
     line-height: 1.5;
     text-rendering: optimizeSpeed;
+    overflow-y: overlay;
 }
+
+//Scrollbar
+html *::-webkit-scrollbar {
+    border-radius: 0;
+    width: 8px;
+}
+
+html *::-webkit-scrollbar-thumb {
+    border-radius: 4px;
+    background-color: rgba(22, 24, 35, .06);
+}
+
+html *::-webkit-scrollbar-track {
+    border-radius: 0;
+    background-color: rgba(0, 0, 0, 0);
+}
+/////////////
+
 button, input, [tabindex]{
     outline: none;
     border: none;
 }
-a[href]{
+a{
     color: var(--text-color);
     text-decoration: none;
 }
