--- a/src/layouts/components/Header/Header.module.scss
+++ b/src/layouts/components/Header/Header.module.scss
@@ -4,10 +4,15 @@
     --search-top-spacer: 9px;
     --search-bottom-width: 52px;
 
-    width: 100%;
-    height: var(--default-layout-header-height, 60px);
-    box-shadow: 0px 1px 1px rgb(0 0 0 / 12%);
+    position: fixed;
+    top: 0;
+    left: 0;
+    z-index: 10;
     display: flex;
+    width: 100%;
+    height: var(--default-layout-header-height);
+    box-shadow: 0px 1px 1px rgb(0 0 0 / 12%);
+    background-color: var(--white);
     justify-content: center;
 }
 .inner{
@@ -19,7 +24,7 @@
     padding: 0 var(--default-layout-horizontal-spacer);
 }
 .logo{
-    
+    display: flex;
 }
 
 .custom-login{
