--- a/src/layouts/components/Search/Search.module.scss
+++ b/src/layouts/components/Search/Search.module.scss
@@ -19,6 +19,7 @@
         outline: none;
         background-color: transparent;
         height: 100%;
+        font-family: var(--font-family);
 
     }
 
